@@ -56,6 +56,7 @@
 #include <sys/stat.h>
 #include <fcntl.h>
 #include <time.h>
+#include <limits.h>
 #else
 #include <stdlib.h>
 #include <unistd.h>
