@@ -43,7 +43,7 @@ RSC=rc.exe
 # PROP Ignore_Export_Lib 0
 # PROP Target_Dir ""
 # ADD BASE CPP /nologo /MT /W3 /GX /O2 /D "WIN32" /D "NDEBUG" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /D "LIBSLP_EXPORTS" /YX /FD /c
-# ADD CPP /nologo /MT /W3 /GX /O2 /D "NDEBUG" /D "_USRDLL" /D "LIBSLP_EXPORTS" /D "ENABLE" /D "WIN32" /D "_WINDOWS" /D "_MBCS" /D "i386" /YX /FD /c
+# ADD CPP /nologo /MT /W3 /GX /O2 /D "NDEBUG" /D "_USRDLL" /D "LIBSLP_EXPORTS" /D "ENABLE" /D "_WINDOWS" /D "i386" /D "WIN32" /D "_MBCS" /D SLP_VERSION=\"0.9.0\" /YX /FD /c
 # ADD BASE MTL /nologo /D "NDEBUG" /mktyplib203 /win32
 # ADD MTL /nologo /D "NDEBUG" /mktyplib203 /win32
 # ADD BASE RSC /l 0x409 /d "NDEBUG"
@@ -73,7 +73,7 @@ PostBuild_Cmds=copy ..\..\libslp\slp.h release
 # PROP Ignore_Export_Lib 0
 # PROP Target_Dir ""
 # ADD BASE CPP /nologo /MTd /W3 /Gm /GX /ZI /Od /D "WIN32" /D "_DEBUG" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /D "LIBSLP_EXPORTS" /YX /FD /GZ /c
-# ADD CPP /nologo /MTd /W3 /Gm /GX /ZI /Od /D "_USRDLL" /D "LIBSLP_EXPORTS" /D "_DEBUG" /D "WIN32" /D "_WINDOWS" /D "_MBCS" /D "i386" /YX /FD /GZ /c
+# ADD CPP /nologo /MTd /W3 /Gm /GX /ZI /Od /D "_USRDLL" /D "LIBSLP_EXPORTS" /D "_WINDOWS" /D "i386" /D "_DEBUG" /D "WIN32" /D "_MBCS" /D SLP_VERSION=\"0.9.0\" /YX /FD /GZ /c
 # ADD BASE MTL /nologo /D "_DEBUG" /mktyplib203 /win32
 # ADD MTL /nologo /D "_DEBUG" /mktyplib203 /win32
 # ADD BASE RSC /l 0x409 /d "_DEBUG"
@@ -165,15 +165,11 @@ SOURCE=..\..\common\slp_compare.c
 # End Source File
 # Begin Source File
 
-SOURCE=..\..\common\slp_da.c
+SOURCE=\mpeterson\cvs\openslp\common\slp_database.c
 # End Source File
 # Begin Source File
 
 SOURCE=..\..\common\slp_linkedlist.c
-# End Source File
-# Begin Source File
-
-SOURCE=..\..\common\slp_logfile.c
 # End Source File
 # Begin Source File
 
@@ -221,15 +217,7 @@ SOURCE=..\..\common\slp_compare.h
 # End Source File
 # Begin Source File
 
-SOURCE=..\..\common\slp_da.h
-# End Source File
-# Begin Source File
-
 SOURCE=..\..\common\slp_linkedlist.h
-# End Source File
-# Begin Source File
-
-SOURCE=..\..\common\slp_logfile.h
 # End Source File
 # Begin Source File
 
